CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
PROJECT(write_to_hardware)

IF(CMAKE_SYSTEM_NAME STREQUAL "Linux")
  ADD_DEFINITIONS(-std=c++11)
ENDIF()

FIND_PACKAGE(Voxel 0.1.0 REQUIRED)

ADD_EXECUTABLE(write2hardware write2hardware.cpp)

TARGET_INCLUDE_DIRECTORIES(write2hardware PUBLIC ${VOXEL_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(write2hardware ${VOXEL_LIBRARIES})
